2010-10-21  Dave Morrison  <drm@finkproject.org>

	* VERSION: releasing version 0.29.14.1 of fink-mirrors

2010-10-10  Max Horn  <max@quendi.de>

	* _keys: Added Bangladesh
	* apache, cpan, ctan, debian, freebsd, gimp, gnome, gnu, kde: mirror updates

2010-10-01  Max Horn  <max@quendi.de>

	* get-mirror.pl:
	  - Re-enable apache parser (seems to work fine)
	  - refactor code to reduce code duplication
	  - when one mirror list has completed parsing, write the result
	     immediately (instead of writing all result files at the end).
	     This way, if you interrupt the script, you at least get to keep
	     any mirror lists it already completed at that point.
	* _keys: Added Serbia
	* apache: mirror updates

2010-10-01  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* _keys: Added Belarus, New Caledonia, and Pakistan
	* kde: eur-PT mirror added

2010-10-01  Max Horn  <max@quendi.de>

	* get-mirror.pl:
	  Fix CTAN mirror parser, disable broken PostgreSQL parser,
	  add various comments
	* cpan, ctan, debian, freebsd, gimp, gnome, gnu, kde: mirror updates

2010-08-23  Andreas Gockel  <fink@unixforge.de>

	* README.contacts, master, rsync:
	  Added new mirror in Helsinki, Finland

2010-06-09  Dave Morrison  <drm@finkproject.org>

	* VERSION: releasing version 0.29.12.1 of fink-mirrors

2010-06-05  Andreas Gockel  <fink@unixforge.de>

	* README.contacts, apt, master, rsync:
	  Added new mirror in Aachen, Germany

2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* inject.pl, install.sh, postinstall.pl.in: update copyright

2009-12-22  Augusto Devegili  <monipol@users.sourceforge.net>

	* VERSION: releasing version 0.29.10.3 of fink-mirrors
	* apt: comment out the Wisconsin bindist

2009-12-21  Augusto Devegili  <monipol@users.sourceforge.net>

	* VERSION: releasing version 0.29.10.2 of fink-mirrors
	* get-mirror.pl: use decoded_content instead of content, new URL for GNU
	  mirrors
	* cpan, freebsd, gimp, gnome, gnu, kde: mirror updates. CPAN mirrors marked