@@ -1,3 +1,7 @@
+2011-01-15  Dave Morrison  <drm@finkproject.org>
+
+	* inject.pl, install.sh, postinstall.pl.in: update copyright
+
 2010-10-21  Dave Morrison  <drm@finkproject.org>
 
 	* VERSION: releasing version 0.29.14.1 of fink-mirrors
